[package]
name = "ronfmt"
version = "0.1.0"
authors = ["Anton Filippov <a.filippov@protonmail.com>"]
description = "A simple tool for autoformatting RON files."
homepage = "https://github.com/Ristarg/ronfmt"
readme = "README.md"
keywords = ["RON", "autoformatting", "beautify", "pretty-print"]
categories = ["command-line-utilities", "development-tools", "value-formatting"]
license = "MIT"
repository = "https://github.com/Ristarg/ronfmt"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
itertools = "0.11.0"
pest = "2.7"
pest_derive = "2.7"
